--- a/headmates/aster.html
+++ b/headmates/aster.html
@@ -20,20 +20,20 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/aster.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/aster.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Aster</h2>
                     <p>Has a lot of power over the system and kinda just fucks things up when they're around.</p>
-                    <p>Not intentionally, just their presence it very disruptive</p>
+                    <p>Not intentionally, just their presence is very disruptive</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/bC3">Layer Cake</a></div>
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-aster">Tumblr</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
                     <p><img src="../images/icons/heart.png"/> They/Them</p>
