--- a/headmates/collective.html
+++ b/headmates/collective.html
@@ -20,20 +20,20 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/collective.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/collective.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Jaiden/Jay</h2>
                     <p>We're a diversian system with 4 main members and a few fragments that come and go</p>
                     <p>Jaiden fronts the most often out of all of us and is who you'll talk to most often, especially if you don't know us that well</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/pB3">Layer Cake</a></div>
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama">Tumblr</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Names</h2>
                     <p><img src="../images/icons/heart.png"/> Jaiden</p>
