--- a/headmates/fragments.html
+++ b/headmates/fragments.html
@@ -20,16 +20,16 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/fragments.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 80%;">
+            <div class="row row-cols-1 row-cols-sm-2">
+                <div class="centered"><img src="../images/headmates/fragments.png" style="width: 50%;"/></div>
+                <div class="description">
                     <h2>Fragments</h2>
                     <p>Flux has a lot of fragments which are basically various splits of his personality, because apparently we couldn't just stop at one system and have a system inside of a system TwT</p>
                     <p>This page is a list of the smaller ones that aren't important enough to get their own page (the important one's each mention in their description that they are a fragment)</p>
                 </div>
             </div>
 
-            <div class="row row-cols-3 frag">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 frag">
                 <div>
                     <h2>Anxiety Flux</h2>
                     <p>Embodiment of Flux's anxiety. Basically just says sorry a lot and cries in a corner-</p>
