--- a/headmates/boa.html
+++ b/headmates/boa.html
@@ -20,20 +20,20 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/boa.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/boa.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Boa</h2>
                     <p>Fictive based on a furry OC that I (Jaiden) made</p>
                     <p>Really struggles to trust people because of <i>backstory</i> so please ask before doing stuff and don't push her into things</p>
                     <p>Again due to <i>backstory</i>, she's broken and glitchy af</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
                     <p><img src="../images/icons/heart.png"/> She/Her</p>
