--- a/headmates/flux.html
+++ b/headmates/flux.html
@@ -20,21 +20,21 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/flux.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/flux.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Flux</h2>
                     <p>Boyflux, masc and neutral terms are okay, but fem terms are only okay if we're really super close and you ask</p>
                     <p>Usually very shy, please don't touch him without asking. Gets overstim very easily.</p>
                     <p>Is a furry and a very wholesome bean</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/gD3">Layer Cake</a></div>
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama">Tumblr</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
                     <p><img src="../images/icons/heart.png"/> They/Them</p>
