--- a/headmates/jaiden.html
+++ b/headmates/jaiden.html
@@ -20,20 +20,20 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/jaiden.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/jaiden.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Jaiden</h2>
                     <p>Probably who you're talking to right now if we're showing you this irl lol, also the one who wrote this page.</p>
                     <p>Flirty Bi mess, loves physical affection and praise</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/pC2">Layer Cake</a></div>
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-jaiden">Tumblr</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
                     <p><img src="../images/icons/heart.png"/> She/Her</p>
