--- a/headmates/jay.html
+++ b/headmates/jay.html
@@ -20,20 +20,20 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/jay.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/jay.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Jay</h2>
                     <p>Original host. Kind of a dick because of internal issues, but he's doing his best to work on it.</p>
                     <p>Doesn't usually respond well to affection so avoid unless you're close to him or at least ask first.</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/oB1">Layer Cake</a></div>
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-jay">Tumblr</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
                     <p><img src="../images/icons/heart.png"/> He/Him</p>
