--- a/headmates/stella.html
+++ b/headmates/stella.html
@@ -20,20 +20,20 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/stella.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/stella.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Stella</h2>
                     <p>Kinda walks the line between just fragment and full headmate so we aren't totally sure</p>
                     <p>Horny gremlin, and struggles to front unless she's actively being at least one of those two things</p>
                     <p>Also a furry lol</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/cE3">Layer Cake</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
                     <p><img src="../images/icons/heart.png"/> She/Her</p>
