--- a/headmates/void.html
+++ b/headmates/void.html
@@ -20,21 +20,21 @@
     </head>
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
-            <div class="row">
-                <div style="width: 20%;"><img src="../images/headmates/void.png" style="width: 100%;"/></div>
-                <div class="description" style="width: 60%;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="centered"><img src="../images/headmates/void.png" style="width: 70%;"/></div>
+                <div class="description">
                     <h2>Void</h2>
                     <p>Kinda a weirdo lol but not in a bad way</p>
                     <p>Basically just spaces out or says weird shit, not around very often and usually isn't for long</p>
                     <p>Used to really not want to exist, but they've either just accepted or suppressed it at this point</p>
                 </div>
-                <div style="width: 20%;">
+                <div class="links">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/bC3">Layer Cake</a></div>
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-void">Tumblr</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3 terms">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
                     <p><img src="../images/icons/heart.png"/> It/Its</p>
