--- a/headmates/collective.html
+++ b/headmates/collective.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="../css/headmates.css">
     </head>
     <body>
-        <div style="margin-left: 10%; margin-right: 10%;">
+        <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
                 <div class="centered"><img src="../images/headmates/collective.png" style="width: 70%;"/></div>
                 <div class="description">
