--- a/headmates/collective.html
+++ b/headmates/collective.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
         <title>Host/Collective</title>
 
         <link
@@ -19,7 +20,7 @@
         <link rel="stylesheet" href="../css/headmates.css">
     </head>
     <body>
-        <div class="container">
+        <div style="margin-left: 10%; margin-right: 10%;">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
                 <div class="centered"><img src="../images/headmates/collective.png" style="width: 70%;"/></div>
                 <div class="description">
