--- a/headmates/stella.html
+++ b/headmates/stella.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
         <title>Stella</title>
         
         <link
