--- a/headmates/fragments.html
+++ b/headmates/fragments.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="../css/headmates.css">
     </head>
     <body>
-        <div style="margin-left: 10%; margin-right: 10%;">
+        <div class="container">
             <div class="row row-cols-1 row-cols-sm-2">
                 <div class="centered"><img src="../images/headmates/fragments.png" style="width: 50%;"/></div>
                 <div class="description">
