--- a/index.html
+++ b/index.html
@@ -5,30 +5,32 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1 style="margin-top: 60px;">AdmiralGama's Site</h1>
+        <div class="container">
+            <h1 style="margin-top: 60px;">AdmiralGama's Site</h1>
 
-        <div class="centered">
-            <a href="portfolio.html"><button>Software Engineering Portfolio</button></a>
-        </div>
-        
-        <div class="centered">
-            <a href="comics.html"><button>Comics</button></a>
-        </div>
+            <div class="centered">
+                <a href="portfolio.html"><button>Software Engineering Portfolio</button></a>
+            </div>
+            
+            <div class="centered">
+                <a href="comics.html"><button>Comics</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="art.html"><button>Art Portfolio</button></a>
-        </div>
+            <div class="centered">
+                <a href="art.html"><button>Art Portfolio</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="electronics.html"><button>Electronics Projects</button></a>
-        </div>
+            <div class="centered">
+                <a href="electronics.html"><button>Electronics Projects</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="system.html"><button>System Info</button></a>
-        </div>
+            <div class="centered">
+                <a href="system.html"><button>System Info</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="socials.html"><button>Socials</button></a>
+            <div class="centered">
+                <a href="socials.html"><button>Socials</button></a>
+            </div>
         </div>
     </body>
 </html>
