--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
+        
         <title>AdmiralGama's Site</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
