--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width">
-        
+
         <title>AdmiralGama's Site</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <div class="container">
-            <h1 style="margin-top: 60px;">AdmiralGama's Site</h1>
+            <div class="centered">
+                <h1 style="margin-top: 60px;">AdmiralGama's Site</h1>
+            </div>
 
             <div class="centered">
                 <a href="portfolio.html"><button>Software Engineering Portfolio</button></a>
