--- a/projects/Water-Quality.html
+++ b/projects/Water-Quality.html
@@ -1,18 +1,22 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
+
         <title>Water Quality Monitoring</title>
         <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
-        <h1>Water Quality Monitoring</h1>
+        <div class="container">
+            <h1>Water Quality Monitoring</h1>
 
-        <div class="centered" style="margin-bottom: 20px;">
-            <embed src="../resources/CadenOslund315ProjectReport.pdf" width="1000" height="1150" type="application/pdf">
-        </div>
+            <div class="centered" style="margin-bottom: 20px;">
+                <embed src="../resources/CadenOslund315ProjectReport.pdf" width="1000" height="1150" type="application/pdf">
+            </div>
 
-        <div class="centered">
-            <a href="https://github.com/AdmiralGama/WaterQualityMonitoringModel"><button class="repo-button">Repository</button></a>
+            <div class="centered">
+                <a href="https://github.com/AdmiralGama/WaterQualityMonitoringModel"><button class="repo-button">Repository</button></a>
+            </div>
         </div>
     </body>
 </html>
