--- a/resume.html
+++ b/resume.html
@@ -1,18 +1,22 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
+
         <title>Resume</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1 style="margin-top: 10px;">Resume</h1>
+        <div class="container">
+            <h1 style="margin-top: 10px;">Resume</h1>
 
-        <div class="centered" style="margin-bottom: 20px;">
-            <embed src="resources/CadenOslundResume.pdf" width="1000" height="1150" type="application/pdf">
-        </div>
+            <div class="centered" style="margin-bottom: 20px;">
+                <embed src="resources/CadenOslundResume.pdf" width="1000" height="1150" type="application/pdf">
+            </div>
 
-        <div class="centered">
-            <a href="resources/CadenOslundResume.pdf" download><button>Download</button></a>
+            <div class="centered">
+                <a href="resources/CadenOslundResume.pdf" download><button>Download</button></a>
+            </div>
         </div>
     </body>
 </html>
