--- a/electronics.html
+++ b/electronics.html
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
+
         <title>Electronics</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1 style="margin-top: 60px;">Electronics Projects</h1>
+        <div class="container">
+            <h1 style="margin-top: 60px;">Electronics Projects</h1>
+        </div>
     </body>
 </html>
