--- a/projects.html
+++ b/projects.html
@@ -1,22 +1,26 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
+
         <title>Projects</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Projects</h2>
+        <div class="container">
+            <h1>Projects</h1>
 
-        <div class="centered">
-            <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
-        </div>
+            <div class="centered">
+                <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
-        </div>
+            <div class="centered">
+                <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="projects/Elite-Material-Sorter.html"><button>Elite Dangerous Material Sorter</button></a>
+            <div class="centered">
+                <a href="projects/Elite-Material-Sorter.html"><button>Elite Dangerous Material Sorter</button></a>
+            </div>
         </div>
     </body>
 </html>
