--- a/projects/Project-Template.html
+++ b/projects/Project-Template.html
@@ -1,12 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
+
         <title>Project Title</title>
         <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
-        <h1>Project Title</h1>
+        <div class="container">
+            <h1>Project Title</h1>
 
-        <p>Project content</p>
+            <p>Project content</p>
+        </div>
     </body>
 </html>
