--- a/socials.html
+++ b/socials.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width">
+
         <title>Socials</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1 style="margin-top: 60px;">Socials</h1>
+        <div class="container">
+            <h1 style="margin-top: 60px;">Socials</h1>
 
-        <div class="centered">
-            <a href="https://www.tumblr.com/admiralgama"><button>Tumblr</button></a>
+            <div class="centered">
+                <a href="https://www.tumblr.com/admiralgama"><button>Tumblr</button></a>
+            </div>
         </div>
     </body>
 </html>
