--- a/portfolio.html
+++ b/portfolio.html
@@ -7,41 +7,43 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <div class="centered">
-            <ul style="position: fixed;">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#aboutme">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
-            </ul>
-        </div>
+        <div class="container">
+            <div class="centered">
+                <ul style="position: fixed;">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#aboutme">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                </ul>
+            </div>
 
-        <h1 id="home" style="margin-top: 60px;">Caden Oslund's Portfolio</h1>
+            <h1 id="home" style="margin-top: 60px;">Caden Oslund's Portfolio</h1>
 
-        <h2 id="aboutme">About Me</h2>
-        
-        <h2 id="projects">Projects</h2>
+            <h2 id="aboutme">About Me</h2>
+            
+            <h2 id="projects">Projects</h2>
 
-        <div class="centered">
-            <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
-        </div>
+            <div class="centered">
+                <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
-        </div>
+            <div class="centered">
+                <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="projects.html"><button>Full List</button></a>
-        </div>
+            <div class="centered">
+                <a href="projects.html"><button>Full List</button></a>
+            </div>
 
-        <h2 id="resume">Resume</h2>
+            <h2 id="resume">Resume</h2>
 
-        <div class="centered">
-            <a href="resume.html"><button>View</button></a>
-        </div>
+            <div class="centered">
+                <a href="resume.html"><button>View</button></a>
+            </div>
 
-        <div class="centered">
-            <a href="resources/CadenOslundResume.pdf" download><button>Download</button></a>
+            <div class="centered">
+                <a href="resources/CadenOslundResume.pdf" download><button>Download</button></a>
+            </div>
         </div>
     </body>
 </html>
