--- a/system.html
+++ b/system.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1 style="margin-top: 60px;">System Info</h1>
 
-            <div id="display" class="row display">
+            <div class="row display">
                 <div><a href="headmates/collective.html"><img src="images/headmates/collective.png"/></a><h2>Host/Collective</h2></div>
                 <div><a href="headmates/jaiden.html"><img src="images/headmates/jaiden.png"/></a><h2>Jaiden</h2></div>
                 <div><a href="headmates/jay.html"><img src="images/headmates/jay.png"/></a><h2>Jay</h2></div>
