--- a/comics.html
+++ b/comics.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="centered">
-                <img id="display" onclick="nextPage()"/>
+                <img id="display" style="width: 100vh;" onclick="nextPage()"/>
             </div>
 
             <script src="js/comics.js"></script>
