--- a/headmates/aster.html
+++ b/headmates/aster.html
@@ -25,6 +25,7 @@
                 <div class="centered"><img src="../images/headmates/aster.png" style="width: 70%;"/></div>
                 <div class="description">
                     <h2>Aster</h2>
+                    <p>Fragment of Flux</p>
                     <p>Has a lot of power over the system and kinda just fucks things up when they're around.</p>
                     <p>Not intentionally, just their presence is very disruptive</p>
                 </div>
