--- a/headmates/void.html
+++ b/headmates/void.html
@@ -25,6 +25,7 @@
                 <div class="centered"><img src="../images/headmates/void.png" style="width: 70%;"/></div>
                 <div class="description">
                     <h2>Void</h2>
+                    <p>Fragment of Flux</p>
                     <p>Kinda a weirdo lol but not in a bad way</p>
                     <p>Basically just spaces out or says weird shit, not around very often and usually isn't for long</p>
                     <p>Used to really not want to exist, but they've either just accepted or suppressed it at this point</p>
