--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
             <h1 style="margin-top: 60px;">Admiral Gama's Site</h1>
 
             <div class="centered">
-                <a href="portfolio.html"><button>Software Engineering Portfolio</button></a>
+                <a href="portfolio"><button>Software Engineering Portfolio</button></a>
             </div>
             
             <div class="centered">
-                <a href="comics.html"><button>Comics</button></a>
+                <a href="comics"><button>Comics</button></a>
             </div>
 
             <div class="centered">
-                <a href="art.html"><button>Art Portfolio</button></a>
+                <a href="art"><button>Art Portfolio</button></a>
             </div>
 
             <div class="centered">
@@ -27,7 +27,7 @@
             </div>
 
             <div class="centered">
-                <a href="system.html"><button>System Info</button></a>
+                <a href="system"><button>System Info</button></a>
             </div>
 
             <div class="centered">
