--- a/portfolio/Water-Quality.html
+++ b/portfolio/Water-Quality.html
@@ -11,7 +11,7 @@
             <h1>Water Quality Monitoring</h1>
 
             <div class="centered" style="margin-bottom: 20px;">
-                <embed src="../resources/CadenOslund315ProjectReport.pdf" width="1000" height="1150" type="application/pdf">
+                <embed src="resources/CadenOslund315ProjectReport.pdf" width="1000" height="1150" type="application/pdf">
             </div>
 
             <div class="centered">
