--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width">
         
         <title>Portfolio</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
         <div class="container">
@@ -15,11 +15,11 @@
             <h2 id="projects">Projects</h2>
 
             <div class="centered">
-                <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
+                <a href="Android-Apps.html"><button>Android Apps</button></a>
             </div>
 
             <div class="centered">
-                <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
+                <a href="Water-Quality.html"><button>Water Quality Monitoring</button></a>
             </div>
 
             <div class="centered">
