--- a/system/fragments.html
+++ b/system/fragments.html
@@ -22,7 +22,7 @@
     <body>
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2">
-                <div class="centered"><img src="../images/headmates/fragments.png" style="width: 50%;"/></div>
+                <div class="centered"><img src="images/fragments.png" style="width: 50%;"/></div>
                 <div class="description">
                     <h2>Fragments</h2>
                     <p>Flux has a lot of fragments which are basically various splits of his personality, because apparently we couldn't just stop at one system and have a system inside of a system TwT</p>
