--- a/system/void.html
+++ b/system/void.html
@@ -22,7 +22,7 @@
     <body>
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="centered"><img src="../images/headmates/void.png" style="width: 70%;"/></div>
+                <div class="centered"><img src="images/void.png" style="width: 70%;"/></div>
                 <div class="description">
                     <h2>Void</h2>
                     <p>Fragment of Flux</p>
@@ -31,25 +31,25 @@
                     <p>Used to really not want to exist, but they've either just accepted or suppressed it at this point</p>
                 </div>
                 <div class="links">
-                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/bC3">Layer Cake</a></div>
-                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-void">Tumblr</a></div>
+                    <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/bC3">Layer Cake</a></div>
+                    <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-void">Tumblr</a></div>
                 </div>
             </div>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
-                    <p><img src="../images/icons/heart.png"/> It/Its</p>
-                    <p><img src="../images/icons/heart.png"/> They/Them</p>
-                    <p><img src="../images/icons/thumbsdown.png"/> Anything Else</p>
+                    <p><img src="icons/heart.png"/> It/Its</p>
+                    <p><img src="icons/heart.png"/> They/Them</p>
+                    <p><img src="icons/thumbsdown.png"/> Anything Else</p>
                 </div>
             </div>
             
             <div class="terms row">
-                <div class="col"><p><img src="../images/icons/heart.png"/> Favorite</p></div>
-                <div class="col"><p><img src="../images/icons/thumbsup.png"/> Good</p></div>
-                <div class="col"><p><img src="../images/icons/thumbsdown.png"/> Bad</p></div>
-                <div class="col"><p><img src="../images/icons/friends.png"/> Only if we're close</p></div>
+                <div class="col"><p><img src="icons/heart.png"/> Favorite</p></div>
+                <div class="col"><p><img src="icons/thumbsup.png"/> Good</p></div>
+                <div class="col"><p><img src="icons/thumbsdown.png"/> Bad</p></div>
+                <div class="col"><p><img src="icons/friends.png"/> Only if we're close</p></div>
             </div>
         </div>
     </body>
