--- a/art/index.html
+++ b/art/index.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device-width">
 
         <title>Art</title>
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/art.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/art.css">
     </head>
     <body>
         <div class="container">
@@ -18,7 +18,7 @@
     
             <div id="main-display" class="row"></div>
     
-            <script src="js/art.js"></script>
+            <script src="../js/art.js"></script>
         </div>
     </body>
 </html>
