--- a/comics/index.html
+++ b/comics/index.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device-width">
         
         <title>Comics</title>
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/comics.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/comics.css">
     </head>
     <body>
         <div class="container">
@@ -31,7 +31,7 @@
                 <img id="display" style="width: 100vh;" onclick="nextPage()"/>
             </div>
 
-            <script src="js/comics.js"></script>
+            <script src="../js/comics.js"></script>
         </div>
     </body>
 </html>
