--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -4,22 +4,22 @@
         <meta name="viewport" content="width=device-width">
 
         <title>Projects</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
         <div class="container">
             <h1>Projects</h1>
 
             <div class="centered">
-                <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
+                <a href="Android-Apps.html"><button>Android Apps</button></a>
             </div>
 
             <div class="centered">
-                <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
+                <a href="Water-Quality.html"><button>Water Quality Monitoring</button></a>
             </div>
 
             <div class="centered">
-                <a href="projects/Elite-Material-Sorter.html"><button>Elite Dangerous Material Sorter</button></a>
+                <a href="Elite-Material-Sorter.html"><button>Elite Dangerous Material Sorter</button></a>
             </div>
         </div>
     </body>
