--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width">
 
         <title>Resume</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
         <div class="container">
