--- a/system/jaiden.html
+++ b/system/jaiden.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width">
-        <title>Stella</title>
+        <title>Jaiden</title>
         
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -22,31 +22,31 @@
     <body>
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="centered"><img src="../images/headmates/stella.png" style="width: 70%;"/></div>
+                <div class="centered"><img src="images/jaiden.png" style="width: 70%;"/></div>
                 <div class="description">
-                    <h2>Stella</h2>
-                    <p>Kinda walks the line between just fragment and full headmate so we aren't totally sure</p>
-                    <p>Horny gremlin, and struggles to front unless she's actively being at least one of those two things</p>
-                    <p>Also a furry lol</p>
+                    <h2>Jaiden</h2>
+                    <p>Probably who you're talking to right now if we're showing you this irl lol, also the one who wrote this page.</p>
+                    <p>Flirty Bi mess, loves physical affection and praise</p>
                 </div>
                 <div class="links">
-                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/cE3">Layer Cake</a></div>
+                    <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/pC2">Layer Cake</a></div>
+                    <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-jaiden">Tumblr</a></div>
                 </div>
             </div>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
-                    <p><img src="../images/icons/heart.png"/> She/Her</p>
-                    <p><img src="../images/icons/thumbsdown.png"/> Anything Else</p>
+                    <p><img src="icons/heart.png"/> She/Her</p>
+                    <p><img src="icons/thumbsdown.png"/> Anything Else</p>
                 </div>
             </div>
             
             <div class="terms row">
-                <div class="col"><p><img src="../images/icons/heart.png"/> Favorite</p></div>
-                <div class="col"><p><img src="../images/icons/thumbsup.png"/> Good</p></div>
-                <div class="col"><p><img src="../images/icons/thumbsdown.png"/> Bad</p></div>
-                <div class="col"><p><img src="../images/icons/friends.png"/> Only if we're close</p></div>
+                <div class="col"><p><img src="icons/heart.png"/> Favorite</p></div>
+                <div class="col"><p><img src="icons/thumbsup.png"/> Good</p></div>
+                <div class="col"><p><img src="icons/thumbsdown.png"/> Bad</p></div>
+                <div class="col"><p><img src="icons/friends.png"/> Only if we're close</p></div>
             </div>
         </div>
     </body>
