--- a/system/jay.html
+++ b/system/jay.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width">
-        <title>Aster</title>
+        <title>Jay</title>
         
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -22,32 +22,32 @@
     <body>
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="centered"><img src="../images/headmates/aster.png" style="width: 70%;"/></div>
+                <div class="centered"><img src="images/jay.png" style="width: 70%;"/></div>
                 <div class="description">
-                    <h2>Aster</h2>
-                    <p>Fragment of Flux</p>
-                    <p>Has a lot of power over the system and kinda just fucks things up when they're around.</p>
-                    <p>Not intentionally, just their presence is very disruptive</p>
+                    <h2>Jay</h2>
+                    <p>Original host. Kind of a dick because of internal issues, but he's doing his best to work on it.</p>
+                    <p>Doesn't usually respond well to affection so avoid unless you're close to him or at least ask first.</p>
                 </div>
                 <div class="links">
-                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/bC3">Layer Cake</a></div>
-                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-aster">Tumblr</a></div>
+                    <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/oB1">Layer Cake</a></div>
+                    <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-jay">Tumblr</a></div>
                 </div>
             </div>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 terms">
                 <div>
                     <h2>Pronouns</h2>
-                    <p><img src="../images/icons/heart.png"/> They/Them</p>
-                    <p><img src="../images/icons/thumbsdown.png"/> Anything Else</p>
+                    <p><img src="icons/heart.png"/> He/Him</p>
+                    <p><img src="icons/thumbsup.png"/> They/Them</p>
+                    <p><img src="icons/friends.png"/> She/Her</p>
                 </div>
             </div>
             
             <div class="terms row">
-                <div class="col"><p><img src="../images/icons/heart.png"/> Favorite</p></div>
-                <div class="col"><p><img src="../images/icons/thumbsup.png"/> Good</p></div>
-                <div class="col"><p><img src="../images/icons/thumbsdown.png"/> Bad</p></div>
-                <div class="col"><p><img src="../images/icons/friends.png"/> Only if we're close</p></div>
+                <div class="col"><p><img src="icons/heart.png"/> Favorite</p></div>
+                <div class="col"><p><img src="icons/thumbsup.png"/> Good</p></div>
+                <div class="col"><p><img src="icons/thumbsdown.png"/> Bad</p></div>
+                <div class="col"><p><img src="icons/friends.png"/> Only if we're close</p></div>
             </div>
         </div>
     </body>
