--- a/socials.html
+++ b/socials.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="margin-top: 60px;">Socials</h1>
+            <h1>Socials</h1>
 
             <div class="centered">
                 <a href="https://www.tumblr.com/admiralgama"><button>Tumblr</button></a>
