--- a/system/index.html
+++ b/system/index.html
@@ -9,7 +9,15 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="margin-top: 60px;">System Info</h1>
+            <h1>System Info</h1>
+
+            <div class="centered">
+                <a href="fronting.html"><button>Who's currently fronting?</button></a>
+            </div>
+
+            <div class="centered">
+                <a href=""><button>What is a system?</button></a>
+            </div>
 
             <div class="row display">
                 <div><a href="collective.html"><img src="images/collective.png"/></a><h2>Host/Collective</h2></div>
