--- a/comics/index.html
+++ b/comics/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="margin-top: 60px;">Comics</h1>
+            <h1>Comics</h1>
 
             <div class="centered">
                 <label for="comic">Comic:</label>
