--- a/electronics.html
+++ b/electronics.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="margin-top: 60px;">Electronics Projects</h1>
+            <h1>Electronics Projects</h1>
         </div>
     </body>
 </html>
