--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="margin-top: 60px;">Admiral Gama's Site</h1>
+            <h1>Admiral Gama's Site</h1>
 
             <div class="centered">
                 <a href="portfolio"><button>Software Engineering Portfolio</button></a>
