--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 id="home" style="margin-top: 60px;">Caden Oslund's Portfolio</h1>
+            <h1 id="home">Caden Oslund's Portfolio</h1>
 
             <h2 id="aboutme">About Me</h2>
             
