--- a/system/index.html
+++ b/system/index.html
@@ -12,11 +12,11 @@
             <h1>System Info</h1>
 
             <div class="centered">
-                <a href="fronting.html"><button>Who's currently fronting?</button></a>
+                <a href="fronting.html"><button>Who's fronting?</button></a>
             </div>
 
             <div class="centered">
-                <a href=""><button>What is a system?</button></a>
+                <a href="faq.html"><button>What's a system?</button></a>
             </div>
 
             <div class="row display">
