--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <div class="container">
-            <h1 id="home">Caden Oslund's Portfolio</h1>
+            <h1>Caden Oslund's Portfolio</h1>
 
-            <h2 id="aboutme">About Me</h2>
+            <h2>About Me</h2>
             
-            <h2 id="projects">Projects</h2>
+            <h2>Projects</h2>
 
             <div class="centered">
                 <a href="Android-Apps.html"><button>Android Apps</button></a>
@@ -26,7 +26,7 @@
                 <a href="projects.html"><button>Full List</button></a>
             </div>
 
-            <h2 id="resume">Resume</h2>
+            <h2>Resume</h2>
 
             <div class="centered">
                 <a href="resume.html"><button>View</button></a>
