--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="margin-top: 10px;">Resume</h1>
+            <h1>Resume</h1>
 
             <div class="centered" style="margin-bottom: 20px;">
                 <embed src="resources/CadenOslundResume.pdf" width="1000" height="1150" type="application/pdf">
