--- a/system/fronting.html
+++ b/system/fronting.html
@@ -24,9 +24,11 @@
         <h1>Fronting</h1>
     
         <div class="centered">
-            <label for="systemID" style="align-self: center; margin-right: 4px;">System ID:</label>
-            <input id="systemID" style="height: fit-content; align-self: center; margin-right: 4px;" placeholder="System ID...">
-            <button class="repo-button" style="padding: 2px; margin: 4px; font-size: 16px;" onclick="submit()">Submit</button>
+            <div class="row row-cols-1 row-cols-md-3">
+                <div style="width: max-content;"><p style="align-self: center; margin-right: 4px; width: max-content;">System ID:</p></div>
+                <div style="width: fit-content;"><input id="systemID" style="height: fit-content; align-self: center; margin-right: 4px;" placeholder="System ID..."></div>
+                <div style="width: fit-content;"><button class="repo-button" style="padding: 2px; margin: 4px; font-size: 16px;" onclick="submit()">Submit</button></div>
+            </div>
         </div>    
 
         <div class="centered">
