--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width">
+        <meta http-equiv='refresh' content='0; URL=http://example.com/'>
         
         <title>Admiral Gama's Site</title>
         <link rel="stylesheet" href="css/main.css">
