--- a/system/flux.html
+++ b/system/flux.html
@@ -28,6 +28,7 @@
                     <p>Boyflux, masc and neutral terms are okay, but fem terms are only okay if we're really super close and you ask</p>
                     <p>Usually very shy, please don't touch him without asking. Gets overstim very easily.</p>
                     <p>Is a furry and a very wholesome bean</p>
+                    <p>Partners are Cu and Ram</p>
                 </div>
                 <div class="links">
                     <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/gD3">Layer Cake</a></div>
