--- a/system/fragments.html
+++ b/system/fragments.html
@@ -26,11 +26,23 @@
                 <div class="description">
                     <h2>Fragments</h2>
                     <p>Flux has a lot of fragments which are basically various splits of his personality, because apparently we couldn't just stop at one system and have a system inside of a system TwT</p>
-                    <p>This page is a list of the smaller ones that aren't important enough to get their own page (the important one's each mention in their description that they are a fragment)</p>
+                    <!--<p>This page is a list of the smaller ones that aren't important enough to get their own page (the important one's each mention in their description that they are a fragment)</p>-->
+                    <p>This page lists all of them except for <a href="stella.html">Stella</a> who has her own page because she walks the line between fragment and full headmate</p>
                 </div>
             </div>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 frag">
+                <div>
+                    <h2>Aster</h2>
+                    <p>Has a lot of power over the system and kinda just fucks things up when they're around.</p>
+                    <p>Not intentionally, just their presence is very disruptive</p>
+                </div>
+                <div>
+                    <h2>Void</h2>
+                    <p>Kinda a weirdo lol but not in a bad way</p>
+                    <p>Basically just spaces out or says weird shit, not around very often and usually isn't for long</p>
+                    <p>Used to really not want to exist, but they've either just accepted or suppressed it at this point</p>
+                </div>
                 <div>
                     <h2>Anxiety Flux</h2>
                     <p>Embodiment of Flux's anxiety. Basically just says sorry a lot and cries in a corner-</p>
