--- a/system/index.html
+++ b/system/index.html
@@ -14,11 +14,10 @@
             <div class="centered">
                 <a href="fronting.html"><button>Who's fronting?</button></a>
             </div>
-
             <div class="centered">
-                <a href="faq.html"><button>What's a system?</button></a>
+                <a href="faq.html"><button>What's a system?/FAQ</button></a>
             </div>
-
+            
             <div class="row display">
                 <div><a href="collective.html"><img src="images/collective.png"/></a><h2>Host/Collective</h2></div>
                 <div><a href="jaiden.html"><img src="images/jaiden.png"/></a><h2>Jaiden</h2></div>
@@ -27,9 +26,9 @@
                 <div><a href="boa.html"><img src="images/boa.png"/></a><h2>Boa</h2></div>
                 <div><a href="gabi.html"><img src="images/gabi.png"/></a><h2>Gabi</h2></div>
                 <div><a href="stella.html"><img src="images/stella.png"/></a><h2>Stella</h2></div>
-                <div><a href="void.html"><img src="images/void.png"/></a><h2>Void</h2></div>
-                <div><a href="aster.html"><img src="images/aster.png"/></a><h2>Aster</h2></div>
-                <div><a href="fragments.html"><img src="images/fragments.png"/></a><h2>Smaller Fragments</h2></div>
+                <!--<div><a href="void.html"><img src="images/void.png"/></a><h2>Void</h2></div>
+                <div><a href="aster.html"><img src="images/aster.png"/></a><h2>Aster</h2></div>-->
+                <div><a href="fragments.html"><img src="images/fragments.png"/></a><h2>Fragments</h2></div>
             </div>
         </div>
     </body>
