--- a/system/jaiden.html
+++ b/system/jaiden.html
@@ -27,6 +27,7 @@
                     <h2>Jaiden</h2>
                     <p>Probably who you're talking to right now if we're showing you this irl lol, also the one who wrote this page.</p>
                     <p>Flirty Bi mess, loves physical affection and praise</p>
+                    <p>Partners are Cu and Petra</p>
                 </div>
                 <div class="links">
                     <div><span><img src="icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/pC2">Layer Cake</a></div>
