--- a/system/faq.html
+++ b/system/faq.html
@@ -10,7 +10,9 @@
         <div class="container">
             <h1>FAQ</h1>
 
-            
+            <h3>What's a system?</h3>
+
+            <h3>How can I talk to a specific system member?</h3>
         </div>
     </body>
 </html>
