About me first person

--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
         <div class="columns is-centered">
           <div class="column is-three-fifths">
             <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">Hi, I'm Caden. Nice to meet you.</h1>
-            <h2 class="subtitle is-size-5-desktop has-text-weight-normal">Motivated Software Engineering graduate, passionate about database development and full-stack integration,
-              connecting complex back-end systems with user-facing applications. Experienced in back-end and full-stack
-              development using cloud technologies, machine learning, and modern web frameworks. Proven ability to manage
+            <h2 class="subtitle is-size-5-desktop has-text-weight-normal">I'm a motivated Software Engineering graduate, passionate about database development and full-stack integration,
+              connecting complex back-end systems with user-facing applications. I'm experienced in back-end and full-stack
+              development using cloud technologies, machine learning, and modern web frameworks. I have a proven ability to manage
               innovative, collaborative development projects through academic and personal initiatives, with a strong focus on
-              
-              performance optimization and efficient system design. Highly adaptable, fast learner.</h2>
+              performance optimization and efficient system design. I'm highly adaptable and a fast learner.</h2>
           </div>
         </div>
       </div>
